--- a/eclipse_ws/biobank2/build.properties
+++ b/eclipse_ws/biobank2/build.properties
@@ -11,6 +11,7 @@ bin.includes = META-INF/,\
                .options,\
                about.mappings,\
                lib/DynamicJasper-3.0.14.jar,\
-               lib/jdt-compiler-3.1.1.jar
+               lib/jdt-compiler-3.1.1.jar,\
+               lib/mail.jar
 output.conf/ = bin/
 Bundle-NativeCode: /scanlib.dll
