--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -190,6 +190,11 @@
             id="edu.ualberta.med.biobank.commands.sessionReload"
             name="Session Reload">
       </command>
+      <command
+            defaultHandler="edu.ualberta.med.biobank.handlers.SendErrorMail"
+            id="edu.ualberta.med.biobank.commands.sendErrorMail"
+            name="Send Error Mail">
+      </command>
    </extension>
    <extension
          point="org.eclipse.ui.handlers">
@@ -1369,6 +1374,11 @@
             class="edu.ualberta.med.biobank.preferences.CabinetPreferencePage"
             id="edu.ualberta.med.biobank.preferences.cabinet"
             name="Cabinet">
+      </page>
+      <page
+            class="org.eclipse.equinox.internal.security.ui.storage.StoragePreferencePage"
+            id="security"
+            name="security">
       </page>
    </extension>
    <extension
