changes to importer as result of meeting

--- a/eclipse_ws/biobank2.importer/conf/config.properties
+++ b/eclipse_ws/biobank2.importer/conf/config.properties
@@ -1,12 +1,12 @@
 # the following properties can be set to 'yes' or 'no'
-cbsr.import.patients=no
+cbsr.import.patients=no	
 cbsr.import.shipments=no
 cbsr.import.patient_visits=no
 #
 # the properties for a cabinet can be set to 'yes', 'no', or the 2 letter bin 
 # labels to be imported  
-cbsr.import.cabinet.01=no
-cbsr.import.cabinet.02=no
+cbsr.import.cabinet.01=AA
+cbsr.import.cabinet.02=AA
 #
 # the properties for a freezer can be set to 'yes', 'no', or the 2 letter hotel 
 # labels to be imported  
