--- a/build.xml
+++ b/build.xml
@@ -266,7 +266,7 @@
 		<sql driver="${mysql.driver.string}" url="jdbc:mysql://${database.host}:${database.port}/${database.name}" userid="${database.username}" password="${database.password}">
 			<transaction src="${data.sql.dir}/createIndices.sql" />
 			<transaction src="${data.sql.dir}/pvAttrType.sql" />
-			<transaction src="${data.sql.dir}/sampleSources.sql" />
+			<transaction src="${data.sql.dir}/sourceVessels.sql" />
 			<transaction src="${data.sql.dir}/sampleTypes.sql" />
 			<transaction src="${data.sql.dir}/containerLabelingScheme.sql" />
 			<transaction src="${data.sql.dir}/shippingCompany.sql" />
