partly solves issue #253 about email for sending error report: * a menu is added to open the dialog * an email is send to a specific address * we need to add a cron on the redmine, for it to check the imap server for new mails to add new issues
Possible improvements :
* right now, the user need to give its email configuration to send the email. The REST API is available in redmine but is not working properly on current version and I didn't succeeded the authentication (using jersey java implementation)
* Propose to send the bug report automatically when error occurs ?

--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -1406,9 +1406,9 @@
             name="Cabinet">
       </page>
       <page
-            class="org.eclipse.equinox.internal.security.ui.storage.StoragePreferencePage"
-            id="security"
-            name="security">
+            class="edu.ualberta.med.biobank.preferences.IssueTrackerPreferencePage"
+            id="edu.ualberta.med.biobank.preferences.gereral"
+            name="Issue Tracker">
       </page>
    </extension>
    <extension
