fixed ActivityStatusWrapper and setter and getter in classes that use it

--- a/eclipse_ws/biobank2.importer/conf/config.properties
+++ b/eclipse_ws/biobank2.importer/conf/config.properties
@@ -1,6 +1,6 @@
 # the following properties can be set to 'yes' or 'no'
-cbsr.import.patients=no
-cbsr.import.shipments=no
+cbsr.import.patients=yes
+cbsr.import.shipments=yes
 cbsr.import.patient_visits=yes
 #
 # the properties for a cabinet can be set to 'yes', 'no', or the 2 letter bin 
