working on import test scripts

--- a/eclipse_ws/biobank2.importer/conf/config.properties
+++ b/eclipse_ws/biobank2.importer/conf/config.properties
@@ -5,13 +5,13 @@ cbsr.import.patient_visits=yes
 #
 # the properties for a cabinet can be set to 'yes', 'no', or the 2 letter bin 
 # labels to be imported  
-cbsr.import.cabinet.01=no
-cbsr.import.cabinet.02=no
+cbsr.import.cabinet.01=yes
+cbsr.import.cabinet.02=yes
 #
 # the properties for a freezer can be set to 'yes', 'no', or the 2 letter hotel 
 # labels to be imported  
-cbsr.import.freezer.01=no
-cbsr.import.freezer.02=no
-cbsr.import.freezer.03=no
-cbsr.import.freezer.05=no
-cbsr.import.freezer.99=no
+cbsr.import.freezer.01=yes
+cbsr.import.freezer.02=yes
+cbsr.import.freezer.03=yes
+cbsr.import.freezer.05=yes
+cbsr.import.freezer.99=yes
