solves #367 an getId does not return null anymore on the allSites wrapper + solves a notification missing on the multiselectwidget

--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -1560,7 +1560,7 @@
                variable="edu.ualberta.med.biobank.sourceprovider.siteSelectionId">
             <not>
                <equals
-                     value="null">
+                     value="-9999">
                </equals>
             </not>
          </with>
