--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -1280,6 +1280,13 @@
             id="edu.ualberta.med.biobank.editors.ReportsEditor"
             name="Reports Editor">
       </editor>
+      <editor
+            class="edu.ualberta.med.biobank.forms.AdvancedReportsEditor"
+            default="false"
+            icon="icons/reportsPerspective.png"
+            id="edu.ualberta.med.biobank.editors.AdvancedReportsEditor"
+            name="Advanced Reports Editor">
+      </editor>
    </extension>
    <extension
          point="org.eclipse.ui.bindings">
@@ -1452,14 +1459,6 @@
             id="edu.ualberta.med.biobank.views.ReportsView"
             icon="icons/reportsPerspective.png"
             name="Reports"
-            restorable="true">
-      </view>
-       <view
-            allowMultiple="false"
-            class="edu.ualberta.med.biobank.views.AdvancedReportsView"
-            id="edu.ualberta.med.biobank.views.AdvancedReportsView"
-            icon="icons/reportsPerspective.png"
-            name="Advanced Reports"
             restorable="true">
       </view>
       <view
