--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -87,7 +87,7 @@
       </perspective>
       <perspective
             class="edu.ualberta.med.biobank.rcp.AliquotManagementPerspective"
-            id="edu.ualberta.med.biobank.perspective.samplesManagement"
+            id="edu.ualberta.med.biobank.perspective.aliquotsManagement"
             name="Samples Management Perspective">
       </perspective>
       <perspective
@@ -201,6 +201,10 @@
       <command
             id="edu.ualberta.med.biobank.commands.search"
             name="Search">
+         <state
+               class="org.eclipse.ui.handlers.RegistryToggleState:false"
+               id="org.eclipse.ui.commands.toggleState">
+         </state>
       </command>
    </extension>
    <extension
@@ -490,9 +494,25 @@
             class="edu.ualberta.med.biobank.handlers.SearchHandler"
             commandId="edu.ualberta.med.biobank.commands.search">
          <activeWhen>
+            <and>
                <reference
                      definitionId="biobank2.loggedIn">
                </reference>
+               <reference
+                     definitionId="biobank2.siteSelected">
+               </reference>
+               <or>
+               <reference
+                     definitionId="biobank2.mainPerpectiveSelected">
+               </reference>
+               <reference
+                     definitionId="biobank2.patientsPerpectiveSelected">
+               </reference>
+               <reference
+                     definitionId="biobank2.shipmentsPerpectiveSelected">
+               </reference>
+			   </or>
+             </and>
          </activeWhen>
       </handler>
    </extension>
@@ -745,7 +765,23 @@
                   commandId="edu.ualberta.med.biobank.commands.search"
                   icon="icons/search.png"
                   label="Search"
+                  style="toggle"
                   tooltip="Search">
+               <visibleWhen
+                     checkEnabled="false">
+                  <and>
+                     <not>
+                        <reference
+                              definitionId="biobank2.sampleManagementPerspectiveSelected">
+                        </reference>
+                     </not>
+                     <not>
+                        <reference
+                              definitionId="biobank2.reportsPerpectiveSelected">
+                        </reference>
+                     </not>
+                  </and>
+               </visibleWhen>
             </command>
          </toolbar>
       </menuContribution>
@@ -917,7 +953,7 @@
             </command>
          </toolbar>
          <toolbar
-               id="edu.ualberta.med.biobank.views.patientsAdmin">
+               id="edu.ualberta.med.biobank.views.PatientsAdminView">
             <command
                   commandId="edu.ualberta.med.biobank.commands.patients.patientAdd"
                   icon="icons/patient_add.png"
@@ -1020,7 +1056,18 @@
                standalone="false"
                visible="true">
          </view>
-         
+         <view
+               closeable="false"
+               id="edu.ualberta.med.biobank.views.SearchView"
+               minimized="false"
+               moveable="true"
+               ratio="0.15"
+               relationship="top"
+               relative="edu.ualberta.med.biobank.views.SessionsView"
+               showTitle="true"
+               standalone="false"
+               visible="false">
+         </view>
       </perspectiveExtension>
       <perspectiveExtension
             targetID="edu.ualberta.med.biobank.perspective.reports">
@@ -1075,7 +1122,7 @@
          </view>
          <view
                closeable="false"
-               id="edu.ualberta.med.biobank.views.patientsAdmin"
+               id="edu.ualberta.med.biobank.views.PatientsAdminView"
                minimized="false"
                moveable="false"
                ratio="0.20"
@@ -1085,9 +1132,21 @@
                standalone="false"
                visible="true">
          </view>
+         <view
+               closeable="false"
+               id="edu.ualberta.med.biobank.views.SearchView"
+               minimized="false"
+               moveable="true"
+               ratio="0.15"
+               relationship="top"
+               relative="edu.ualberta.med.biobank.views.PatientsAdminView"
+               showTitle="true"
+               standalone="false"
+               visible="false">
+         </view>
       </perspectiveExtension>
       <perspectiveExtension
-            targetID="edu.ualberta.med.biobank.perspective.samplesManagement">
+            targetID="edu.ualberta.med.biobank.perspective.aliquotsManagement">
          <view
                closeable="false"
                id="org.eclipse.ui.console.ConsoleView"
@@ -1127,7 +1186,7 @@
          </view>
          <view
                closeable="false"
-               id="edu.ualberta.med.biobank.views.shipmentAdmin"
+               id="edu.ualberta.med.biobank.views.ShipmentAdminView"
                minimized="false"
                moveable="false"
                ratio="0.20"
@@ -1136,6 +1195,18 @@
                showTitle="false"
                standalone="false"
                visible="true">
+         </view>
+         <view
+               closeable="false"
+               id="edu.ualberta.med.biobank.views.SearchView"
+               minimized="false"
+               moveable="true"
+               ratio="0.15"
+               relationship="top"
+               relative="edu.ualberta.med.biobank.views.ShipmentAdminView"
+               showTitle="true"
+               standalone="false"
+               visible="false">
          </view>
       </perspectiveExtension>
       </extension>
@@ -1472,21 +1543,21 @@
             allowMultiple="false"
             class="edu.ualberta.med.biobank.views.PatientAdministrationView"
             icon="icons/patientPerspective.png"
-            id="edu.ualberta.med.biobank.views.patientsAdmin"
+            id="edu.ualberta.med.biobank.views.PatientsAdminView"
             name="Patients administration"
             restorable="true">
       </view>
       <view
             class="edu.ualberta.med.biobank.views.ShipmentAdministrationView"
             icon="icons/shipmentPerpective.png"
-            id="edu.ualberta.med.biobank.views.shipmentAdmin"
+            id="edu.ualberta.med.biobank.views.ShipmentAdminView"
             name="Shipments administration"
             restorable="true">
       </view>
       <view
             class="edu.ualberta.med.biobank.views.SearchView"
             icon="icons/search.png"
-            id="edu.ualberta.med.biobank.views.search"
+            id="edu.ualberta.med.biobank.views.SearchView"
             name="Search"
             restorable="true">
       </view>
@@ -1534,7 +1605,7 @@
          <with
                variable="activeWorkbenchWindow.activePerspective">
             <equals
-                  value="edu.ualberta.med.biobank.perspective.samplesManagement">
+                  value="edu.ualberta.med.biobank.perspective.aliquotsManagement">
             </equals>
          </with>
       </definition>
