--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -1056,8 +1056,8 @@
                id="edu.ualberta.med.biobank.views.SearchView"
                minimized="false"
                moveable="true"
-               ratio="0.15"
-               relationship="top"
+               ratio="0.85"
+               relationship="bottom"
                relative="edu.ualberta.med.biobank.views.SessionsView"
                showTitle="true"
                standalone="false"
@@ -1132,8 +1132,8 @@
                id="edu.ualberta.med.biobank.views.SearchView"
                minimized="false"
                moveable="true"
-               ratio="0.15"
-               relationship="top"
+               ratio="0.85"
+               relationship="bottom"
                relative="edu.ualberta.med.biobank.views.PatientsAdminView"
                showTitle="true"
                standalone="false"
@@ -1196,8 +1196,8 @@
                id="edu.ualberta.med.biobank.views.SearchView"
                minimized="false"
                moveable="true"
-               ratio="0.15"
-               relationship="top"
+               ratio="0.85"
+               relationship="bottom"
                relative="edu.ualberta.med.biobank.views.ShipmentAdminView"
                showTitle="true"
                standalone="false"
