--- a/eclipse_ws/biobank2.importer/.settings/org.eclipse.jdt.core.prefs
+++ b/eclipse_ws/biobank2.importer/.settings/org.eclipse.jdt.core.prefs
@@ -1,4 +1,4 @@
-#Wed Dec 16 09:25:18 MST 2009
+#Sat Mar 27 16:27:11 MDT 2010
 eclipse.preferences.version=1
 org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
 org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.6
