--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ caCORE_SDK
 caCORE_SDK_411.tar.gz
 eclipse_ws/.metadata
 eclipse_ws/biobank.common/bin
+eclipse_ws/biobank.common/conf/*.xml
 eclipse_ws/biobank.common/lib/*
 eclipse_ws/biobank.common/src/edu/ualberta/med/biobank/common/test
 eclipse_ws/biobank2.importer/bin
