--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -173,6 +173,14 @@
             id="edu.ualberta.med.biobank.commands.debug.cbsrConfigWithData"
             name="CBSR Configuration with data">
       </command>
+       <command
+            id="edu.ualberta.med.biobank.commands.shipments.shipmentAdd"
+            name="Add shipment">
+      </command>
+       <command
+            id="edu.ualberta.med.biobank.commands.shipments.shipmentDelete"
+            name="Delete shipment">
+      </command>
       <command
             id="edu.ualberta.med.biobank.commands.patients.patientAdd"
             name="Add patient">
@@ -406,6 +414,56 @@
          </activeWhen>
       </handler>
       <handler
+            class="edu.ualberta.med.biobank.handlers.ShipmentAddHandler"
+            commandId="edu.ualberta.med.biobank.commands.shipments.shipmentAdd">
+         <activeWhen>
+            <and>
+              <reference
+                    definitionId="biobank2.shipmentsPerspectiveSelected">
+              </reference>
+              <reference
+                    definitionId="biobank2.siteSelected">
+              </reference>
+            </and>
+         </activeWhen>
+         <enabledWhen>
+            <reference
+                  definitionId="biobank2.shipmentsPerspectiveSelected">
+            </reference>
+         </enabledWhen>
+      </handler>
+      <handler
+            class="edu.ualberta.med.biobank.handlers.ShipmentDeleteHandler"
+            commandId="edu.ualberta.med.biobank.commands.shipments.shipmentDelete">
+         <activeWhen>
+            <and>
+              <reference
+                    definitionId="biobank2.shipmentsPerspectiveSelected">
+              </reference>
+              <reference
+                    definitionId="biobank2.siteSelected">
+              </reference>
+            </and>
+         </activeWhen>
+         <enabledWhen>
+            <and>
+               <reference
+                     definitionId="oneElementSelected">
+               </reference>
+               <with
+                     variable="selection">
+                  <iterate
+                        ifEmpty="false"
+                        operator="or">
+                     <instanceof
+                           value="edu.ualberta.med.biobank.treeview.ShipmentAdapter">
+                     </instanceof>
+                  </iterate>
+               </with>
+            </and>
+         </enabledWhen>
+      </handler>
+      <handler
             class="edu.ualberta.med.biobank.handlers.PatientAddHandler"
             commandId="edu.ualberta.med.biobank.commands.patients.patientAdd">
          <activeWhen>
@@ -520,7 +578,7 @@
                      definitionId="biobank2.patientsPerpectiveSelected">
                </reference>
                <reference
-                     definitionId="biobank2.shipmentsPerpectiveSelected">
+                     definitionId="biobank2.shipmentsPerspectiveSelected">
                </reference>
 			   </or>
              </and>
@@ -539,7 +597,7 @@
                         definitionId="biobank2.patientsPerpectiveSelected">
                   </reference>
                   <reference
-                        definitionId="biobank2.shipmentsPerpectiveSelected">
+                        definitionId="biobank2.shipmentsPerspectiveSelected">
                   </reference>
                </or>
             </and>
@@ -547,7 +605,7 @@
          <enabledWhen>
             <or>
                <reference
-                     definitionId="biobank2.shipmentsPerpectiveSelected">
+                     definitionId="biobank2.shipmentsPerspectiveSelected">
                </reference>
                <reference
                      definitionId="biobank2.patientsPerpectiveSelected">
@@ -701,6 +759,22 @@
             </visibleWhen>
          </menu>
          <menu
+               id="edu.ualberta.med.biobank.menu.shipments"
+               label="Shipments">
+            <command
+                  commandId="edu.ualberta.med.biobank.commands.shipments.shipmentAdd"
+                  icon="icons/shipment_add.png"
+                  label="Add Shipment"
+                  style="push">
+            </command>
+            <visibleWhen
+                  checkEnabled="false">
+               <reference
+                     definitionId="biobank2.shipmentsPerspectiveSelected">
+               </reference>
+            </visibleWhen>
+         </menu>
+         <menu
                id="edu.ualberta.med.biobank.menu.view"
                label="View">
             <command
@@ -736,7 +810,7 @@
                            definitionId="biobank2.mainPerpectiveSelected">
                      </reference>
                      <reference
-                           definitionId="biobank2.shipmentsPerpectiveSelected">
+                           definitionId="biobank2.shipmentsPerspectiveSelected">
                      </reference>
                   </or>
                </visibleWhen>
@@ -889,7 +963,7 @@
                            definitionId="biobank2.mainPerpectiveSelected">
                      </reference>
                      <reference
-                           definitionId="biobank2.shipmentsPerpectiveSelected">
+                           definitionId="biobank2.shipmentsPerspectiveSelected">
                      </reference>
                   </or>
                </visibleWhen>
@@ -1083,6 +1157,30 @@
          <toolbar
                id="edu.ualberta.med.biobank.views.ShipmentAdminView">
             <command
+                  commandId="edu.ualberta.med.biobank.commands.shipments.shipmentAdd"
+                  icon="icons/shipment_add.png"
+                  label="Add Shipment"
+                  style="push">
+               <visibleWhen
+                     checkEnabled="false">
+                  <reference
+                        definitionId="biobank2.shipmentsPerspectiveSelected">
+                  </reference>
+               </visibleWhen>
+            </command>
+            <command
+                  commandId="edu.ualberta.med.biobank.commands.shipments.shipmentDelete"
+                  icon="icons/shipment_delete.png"
+                  label="Delete Shipment"
+                  style="push">
+               <visibleWhen
+                     checkEnabled="false">
+                  <reference
+                        definitionId="biobank2.shipmentsPerspectiveSelected">
+                  </reference>
+               </visibleWhen>
+            </command>
+            <command
                   commandId="edu.ualberta.med.biobank.commands.todayNodeReload"
                   icon="icons/reload.png"
                   label="Reload"
@@ -1091,7 +1189,7 @@
                <visibleWhen
                      checkEnabled="false">
                   <reference
-                        definitionId="biobank2.shipmentsPerpectiveSelected">
+                        definitionId="biobank2.shipmentsPerspectiveSelected">
                   </reference>
                </visibleWhen>
             </command>
@@ -1473,6 +1571,16 @@
             sequence="M1+Q">
       </key>
       <key
+            commandId="edu.ualberta.med.biobank.commands.shipments.shipmentAdd"
+            schemeId="biobank2.scheme"
+            sequence="M1+M2+S">
+      </key>
+      <key
+            commandId="edu.ualberta.med.biobank.commands.shipments.shipmentDelete"
+            schemeId="biobank2.scheme"
+            sequence="M1+M2+D">
+      </key>
+      <key
             commandId="edu.ualberta.med.biobank.commands.patients.patientAdd"
             schemeId="biobank2.scheme"
             sequence="M3+P">
@@ -1655,7 +1763,7 @@
          </with>
       </definition>
           <definition
-            id="biobank2.shipmentsPerpectiveSelected">
+            id="biobank2.shipmentsPerspectiveSelected">
          <with
                variable="activeWorkbenchWindow.activePerspective">
             <equals
