--- a/eclipse_ws/biobank2/plugin.xml
+++ b/eclipse_ws/biobank2/plugin.xml
@@ -185,9 +185,17 @@
             id="edu.ualberta.med.biobank.commands.patients.patientAdd"
             name="Add patient">
       </command>
+       <command
+            id="edu.ualberta.med.biobank.commands.patients.patientDelete"
+            name="Delete patient">
+      </command>
       <command
             id="edu.ualberta.med.biobank.commands.patients.patientVisitAdd"
             name="Add Patient Visit">
+      </command>
+      <command
+            id="edu.ualberta.med.biobank.commands.patients.patientVisitDelete"
+            name="Delete Patient Visit">
       </command>
       <command
             id="edu.ualberta.med.biobank.commands.shipmentAdmin"
@@ -483,6 +491,37 @@
          </enabledWhen>
       </handler>
       <handler
+            class="edu.ualberta.med.biobank.handlers.PatientDeleteHandler"
+            commandId="edu.ualberta.med.biobank.commands.patients.patientDelete">
+         <activeWhen>
+            <and>
+              <reference
+                    definitionId="biobank2.patientsPerpectiveSelected">
+              </reference>
+              <reference
+                    definitionId="biobank2.siteSelected">
+              </reference>
+            </and>
+         </activeWhen>
+          <enabledWhen>
+            <and>
+               <reference
+                     definitionId="oneElementSelected">
+               </reference>
+			   <with
+                  variable="selection">
+                  <iterate
+                        ifEmpty="false"
+                        operator="or">
+                     <instanceof
+                           value="edu.ualberta.med.biobank.treeview.PatientAdapter">
+                     </instanceof>
+                  </iterate>
+          	  </with>
+            </and>
+         </enabledWhen>
+      </handler>
+      <handler
             class="edu.ualberta.med.biobank.handlers.PatientAdministrationHandler"
             commandId="edu.ualberta.med.biobank.commands.patientAdmin">
          <activeWhen>
@@ -521,6 +560,37 @@
                         operator="or">
                      <instanceof
                            value="edu.ualberta.med.biobank.treeview.PatientAdapter">
+                     </instanceof>
+                  </iterate>
+          	  </with>
+            </and>
+         </enabledWhen>
+      </handler>
+      <handler
+            class="edu.ualberta.med.biobank.handlers.PatientVisitDeleteHandler"
+            commandId="edu.ualberta.med.biobank.commands.patients.patientVisitDelete">
+         <activeWhen>
+            <and>
+               <reference
+                     definitionId="biobank2.patientsPerpectiveSelected">
+               </reference>
+               <reference
+                     definitionId="biobank2.siteSelected">
+               </reference>
+            </and>
+         </activeWhen>
+         <enabledWhen>
+            <and>
+               <reference
+                     definitionId="oneElementSelected">
+               </reference>
+			   <with
+                  variable="selection">
+                  <iterate
+                        ifEmpty="false"
+                        operator="or">
+                     <instanceof
+                           value="edu.ualberta.med.biobank.treeview.PatientVisitAdapter">
                      </instanceof>
                   </iterate>
           	  </with>
@@ -706,9 +776,21 @@
                   style="push">
             </command>
             <command
+                  commandId="edu.ualberta.med.biobank.commands.patients.patientDelete"
+                  icon="icons/patient_delete.png"
+                  label="Delete Patient"
+                  style="push">
+            </command>
+            <command
                   commandId="edu.ualberta.med.biobank.commands.patients.patientVisitAdd"
                   icon="icons/patientVisit_add.png"
                   label="Add Patient Visit"
+                  style="push">
+            </command>
+             <command
+                  commandId="edu.ualberta.med.biobank.commands.patients.patientVisitDelete"
+                  icon="icons/patientVisit_delete.png"
+                  label="Delete Patient Visit"
                   style="push">
             </command>
             <visibleWhen
@@ -1081,9 +1163,27 @@
                </visibleWhen>
             </command>
             <command
+                  commandId="edu.ualberta.med.biobank.commands.patients.patientDelete"
+                  icon="icons/patient_delete.png"
+                  label="Delete Patient"
+                  style="push">
+            </command>
+            <command
                   commandId="edu.ualberta.med.biobank.commands.patients.patientVisitAdd"
                   icon="icons/patientVisit_add.png"
                   label="Add Patient Visit"
+                  style="push">
+               <visibleWhen
+                     checkEnabled="false">
+                  <reference
+                        definitionId="biobank2.patientsPerpectiveSelected">
+                  </reference>
+               </visibleWhen>
+            </command>
+            <command
+                  commandId="edu.ualberta.med.biobank.commands.patients.patientVisitDelete"
+                  icon="icons/patientVisit_delete.png"
+                  label="Delete Patient Visit"
                   style="push">
                <visibleWhen
                      checkEnabled="false">
@@ -1569,16 +1669,6 @@
             commandId="edu.ualberta.med.biobank.commands.quit"
             schemeId="biobank2.scheme"
             sequence="M1+Q">
-      </key>
-      <key
-            commandId="edu.ualberta.med.biobank.commands.shipments.shipmentAdd"
-            schemeId="biobank2.scheme"
-            sequence="M1+M2+S">
-      </key>
-      <key
-            commandId="edu.ualberta.med.biobank.commands.shipments.shipmentDelete"
-            schemeId="biobank2.scheme"
-            sequence="M1+M2+D">
       </key>
       <key
             commandId="edu.ualberta.med.biobank.commands.patients.patientAdd"
