--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ caCORE_SDK_411.tar.gz
 eclipse_ws/.metadata
 eclipse_ws/biobank.common/bin
 eclipse_ws/biobank.common/conf/*.xml
-eclipse_ws/biobank.common/lib/*
+eclipse_ws/biobank.common/lib/*.jar
 eclipse_ws/biobank.common/src/edu/ualberta/med/biobank/common/test
 eclipse_ws/biobank2.importer/bin
 eclipse_ws/biobank2.importer/conf
